--- a/css/style.production.css
+++ b/css/style.production.css
@@ -70,8 +70,8 @@ button {
 }
 button:hover,
 button:focus,
-.button:hover,
-,button:focus {
+button:hover,
+button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
   /* reduces the opacity of the button to 80% */
@@ -91,7 +91,7 @@ h2 {
 }
 h3 {
   font-size: 18px;
-  font-weight: var(font-weight);
+  font-weight: var(--font-weight);
 }
 .profile__portrait {
   float: left;
@@ -165,6 +165,7 @@ h3 {
 .social-media a {
   text-decoration: none;
 }
+
 @media all and (max-width: 500px) {
   .grid {
     -ms-grid-columns: 1fr;
